--- a/index.html
+++ b/index.html
@@ -2,10 +2,29 @@
 
 <head>
 	<meta charset="utf-8">
+	<style>
+		label { display: block; margin-bottom: 7px;}
+	  </style>
 	<script>
 		// TODO: create a handler
+		let action = {
+			"google": "https://www.google.com",
+			"duck": "https://www.duckduckgo.com",
+			"bing": "https://www.bing.com",
+			"ask": "https://www.ask.com"
+		}
+		function setSearchEngine() {
+			let engine = document.querySelector("input[name=engine]:checked");
+			let actionURL = action[engine.value];
+			// console.log(actionURL);
+			return actionURL;
+		};
     window.addEventListener("load", function(){
         // TODO: register the handler
+	  let form = document.querySelector("form");
+      form.addEventListener("submit", function(event) {
+		  form.setAttribute("action", setSearchEngine());
+	  });
     });
 	</script>
 </head>
@@ -13,7 +32,13 @@
 <body>
 
 	<form id="searchForm">
-    <!-- TODO: add form elements -->
+    <label><input type="text" name="q"/></label>
+	Select a Search Engine:
+	<label>Google <input type="radio" name="engine" value="google"/></label>
+	<label>DuckDuckGo <input type="radio" name="engine" value="duck"/></label>
+	<label>Bing <input type="radio" name="engine" value="bing"/></label>
+	<label>Ask <input type="radio" name="engine" value="ask"/></label>
+	<button type="submit" value="Submit">Submit</button>
 	</form>
 
 </body>
